Nuevas rutas, precios ajustados y link de pago corto

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                                         <option value="tacna">Tacna</option>
                                         <option value="huancayo">Huancayo</option>
                                         <option value="puno">Puno</option>
+                                        <option value="tarapoto">Tarapoto</option>
+                                        <option value="huanuco">Huánuco</option>
                                     </select>
                                     <button type="button" class="swap-btn" id="swap-cities">⇅</button>
                                 </div>
@@ -86,6 +88,8 @@
                                         <option value="tacna">Tacna</option>
                                         <option value="huancayo">Huancayo</option>
                                         <option value="puno">Puno</option>
+                                        <option value="tarapoto">Tarapoto</option>
+                                        <option value="huanuco">Huánuco</option>
                                     </select>
                                 </div>
                                 <div class="search-field">
